fixed resume button on mobile

--- a/about/about.css
+++ b/about/about.css
@@ -32,7 +32,9 @@ body{
     background-color: #F0F1FA;
     font-family: "Kanit", serif;
     font-optical-sizing: auto;
-    font-style: normal
+    font-style: normal;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 a {
@@ -157,6 +159,10 @@ a {
 
 .resume-option:hover .email-redirect-txt{
     color: black;
+}
+
+.resume-mobile-option{
+    display: none;
 }
 
 
@@ -684,6 +690,10 @@ text-align: center;
 
     .menu-btn {
         font-size: 2vw;
+    }
+
+    .resume-mobile-option{
+        display: block;
     }
 
     .hamburger-menu-contianer {
