--- a/projects/projects.css
+++ b/projects/projects.css
@@ -35,6 +35,8 @@ body{
     font-family: "Kanit", serif;
     font-optical-sizing: auto;
     font-style: normal;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 a {
@@ -178,6 +180,11 @@ a {
 .resume-option:hover .email-redirect-txt{
     color: black;
 }
+
+.resume-mobile-option{
+    display: none;
+}
+
 
 .music-off{
     display: none;
@@ -707,6 +714,10 @@ a {
     
         .menu-btn {
             font-size: 2vw;
+        }
+
+        .resume-mobile-option{
+            display: block;
         }
     
         .hamburger-menu-contianer {
