--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ body{
     font-family: "Kanit", serif;
     font-optical-sizing: auto;
     font-style: normal;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 a {
@@ -166,6 +168,10 @@ a {
 
 .resume-option:hover .email-redirect-txt{
     color: black;
+}
+
+.resume-mobile-option{
+    display: none;
 }
 
 .music-off{
@@ -727,6 +733,10 @@ text-decoration: underline;
 
     .menu-btn {
         font-size: 2vw;
+    }
+
+    .resume-mobile-option{
+        display: block;
     }
 
     .hamburger-menu-contianer {
